[NOID] var additions rebase