@@ -1,13 +1,13 @@
 package apoc.vectordb;
 
-import static apoc.util.MapUtil.map;
-
 import apoc.util.UrlResolver;
+import org.neo4j.internal.kernel.api.procs.ProcedureCallContext;
+
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
-import org.neo4j.internal.kernel.api.procs.ProcedureCallContext;
+
+import static apoc.util.MapUtil.map;
 
 public class ChromaHandler implements VectorDbHandler {
     @Override
@@ -29,10 +29,12 @@ public class ChromaHandler implements VectorDbHandler {
     static class ChromaEmbeddingHandler implements VectorEmbeddingHandler {
 
         @Override
-        public <T> VectorEmbeddingConfig fromGet(
-                Map<String, Object> config, ProcedureCallContext procedureCallContext, List<T> ids, String collection) {
+        public <T> VectorEmbeddingConfig fromGet(Map<String, Object> config,
+                                                 ProcedureCallContext procedureCallContext,
+                                                 List<T> ids,
+                                                 String collection) {
 
-            List<String> fields = procedureCallContext.outputFields().collect(Collectors.toList());
+            List<String> fields = procedureCallContext.outputFields().toList();
 
             VectorEmbeddingConfig conf = new VectorEmbeddingConfig(config);
             Map<String, Object> additionalBodies = map("ids", ids);
@@ -41,27 +43,28 @@ public class ChromaHandler implements VectorDbHandler {
         }
 
         @Override
-        public VectorEmbeddingConfig fromQuery(
-                Map<String, Object> config,
-                ProcedureCallContext procedureCallContext,
-                List<Double> vector,
-                Object filter,
-                long limit,
-                String collection) {
+        public VectorEmbeddingConfig fromQuery(Map<String, Object> config,
+                                               ProcedureCallContext procedureCallContext,
+                                               List<Double> vector,
+                                               Object filter,
+                                               long limit,
+                                               String collection) {
 
-            List<String> fields = procedureCallContext.outputFields().collect(Collectors.toList());
+            List<String> fields = procedureCallContext.outputFields().toList();
 
             VectorEmbeddingConfig conf = new VectorEmbeddingConfig(config);
-            Map<String, Object> additionalBodies =
-                    map("query_embeddings", List.of(vector), "where", filter, "n_results", limit);
+            Map<String, Object> additionalBodies = map("query_embeddings", List.of(vector),
+                    "where", filter,
+                    "n_results", limit);
 
             return getVectorEmbeddingConfig(conf, fields, additionalBodies);
         }
 
         // "include": [metadatas, embeddings, ...] return the metadata/embeddings/... if included in the list
-        // therefore is the RestAPI itself that doesn't return the data if `YIELD ` has not metadata/embedding
-        private static VectorEmbeddingConfig getVectorEmbeddingConfig(
-                VectorEmbeddingConfig config, List<String> fields, Map<String, Object> additionalBodies) {
+        // therefore is the RestAPI itself that doesn't return the data if `YIELD ` has not metadata/embedding  
+        private VectorEmbeddingConfig getVectorEmbeddingConfig(VectorEmbeddingConfig config,
+                                                                      List<String> fields,
+                                                                      Map<String, Object> additionalBodies) {
             ArrayList<String> include = new ArrayList<>();
             if (fields.contains("metadata")) {
                 include.add("metadatas");
@@ -78,7 +81,8 @@ public class ChromaHandler implements VectorDbHandler {
 
             additionalBodies.put("include", include);
 
-            return VectorEmbeddingHandler.populateApiBodyRequest(config, additionalBodies);
+            return populateApiBodyRequest(config, additionalBodies);
         }
     }
+
 }
